crates/parser/src/snapshots/parser__lexer__tests__multi_string_with_equals.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: Str,
                range: 0..15,
            },
            "[=====[s]=====]",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 15..16,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Str,
                range: 16..26,
            },
            "[==[an]==]",
        ),
    ),
]
