crates/parser/src/snapshots/parser__lexer__tests__multiline_equals.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 1,
            },
            "\n",
        ),
    ),
    Ok(
        (
            Token {
                kind: Str,
                len: 39,
            },
            "[=====[\nbracketd string134 asd\n\n]=====]",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 13,
            },
            "\n            ",
        ),
    ),
]
