crates/parser/src/snapshots/parser__lexer__tests__numbers.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: Number,
                len: 1,
            },
            "3",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 1,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Number,
                len: 3,
            },
            "3.0",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 3,
            },
            "\n  ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Number,
                len: 6,
            },
            "3.1416",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 4,
            },
            "    ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Number,
                len: 9,
            },
            "314.16e-2",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 7,
            },
            "\n      ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Number,
                len: 8,
            },
            "3.1416E1",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 2,
            },
            "  ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Number,
                len: 4,
            },
            "0xff",
        ),
    ),
]
