crates/parser/src/snapshots/parser__lexer__tests__operators.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 1,
            },
            "\n",
        ),
    ),
    Ok(
        (
            Token {
                kind: Bang,
                len: 1,
            },
            "!",
        ),
    ),
    Ok(
        (
            Token {
                kind: Number,
                len: 2,
            },
            "13",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 1,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Bang,
                len: 1,
            },
            "!",
        ),
    ),
    Ok(
        (
            Token {
                kind: TrueKw,
                len: 4,
            },
            "true",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 13,
            },
            "\n            ",
        ),
    ),
]
