crates/parser/src/snapshots/parser__lexer__tests__punct.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 0..1,
            },
            "\n",
        ),
    ),
    Ok(
        (
            Token {
                kind: Comma,
                range: 1..2,
            },
            ",",
        ),
    ),
    Ok(
        (
            Token {
                kind: Dot,
                range: 2..3,
            },
            ".",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                range: 3..6,
            },
            "awe",
        ),
    ),
    Ok(
        (
            Token {
                kind: Semicolon,
                range: 6..7,
            },
            ";",
        ),
    ),
    Ok(
        (
            Token {
                kind: Colon,
                range: 7..8,
            },
            ":",
        ),
    ),
    Ok(
        (
            Token {
                kind: Bang,
                range: 8..9,
            },
            "!",
        ),
    ),
    Ok(
        (
            Token {
                kind: Semicolon,
                range: 9..10,
            },
            ";",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 10..23,
            },
            "\n            ",
        ),
    ),
]
