crates/parser/src/snapshots/parser__lexer__tests__strings.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 0..1,
            },
            "\n",
        ),
    ),
    Ok(
        (
            Token {
                kind: Str,
                range: 1..7,
            },
            "\"str\n\"",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 7..8,
            },
            "\n",
        ),
    ),
    Ok(
        (
            Token {
                kind: Str,
                range: 8..26,
            },
            "\"this is a string\"",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 26..28,
            },
            "\n\n",
        ),
    ),
    Ok(
        (
            Token {
                kind: Str,
                range: 28..46,
            },
            "\'\nanother string\n\'",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 46..61,
            },
            "\n              ",
        ),
    ),
]
