crates/parser/src/snapshots/parser__lexer__tests__vararg.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: FunctionKw,
                range: 0..8,
            },
            "function",
        ),
    ),
    Ok(
        (
            Token {
                kind: LParen,
                range: 8..9,
            },
            "(",
        ),
    ),
    Ok(
        (
            Token {
                kind: TripleDot,
                range: 9..12,
            },
            "...",
        ),
    ),
    Ok(
        (
            Token {
                kind: RParen,
                range: 12..13,
            },
            ")",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 13..14,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                range: 14..19,
            },
            "print",
        ),
    ),
    Ok(
        (
            Token {
                kind: LParen,
                range: 19..20,
            },
            "(",
        ),
    ),
    Ok(
        (
            Token {
                kind: TripleDot,
                range: 20..23,
            },
            "...",
        ),
    ),
    Ok(
        (
            Token {
                kind: RParen,
                range: 23..24,
            },
            ")",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 24..25,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: EndKw,
                range: 25..28,
            },
            "end",
        ),
    ),
]
